# snake_game

./: .gitignore  Cargo.toml  Cargo.toml-E  Makefile  README.md  index.html  index.ts  package-lock.json  package.json  snake.afdesign  tsconfig.json  webpack.config.js
.github/workflows/: build and test on jerryhobby.com.yaml  build and test on ubuntu.yaml
assets/: style.css
src/: identification.rs  lib.rs  main.rs  person.rs  snake.rs
src/person/: identification.rs  mod.rs
www/: bootstrap.js  index.html  index.js  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
www/assets/: style.css
