[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"
description = "A simple snake game. Written in Rust and compiled to WebAssembly."
authors = ["Jerry Hobby"]
repository = "https://github.com/JerryHobby/snake_game"
license = "MIT"

[dependencies]
wasm-bindgen = "0.2.74"
wee_alloc = "0.4.5"
cfg-if = "1.0.0"

[lib]
crate-type = ["cdylib"]

